# kaarel-bet

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml  run_experiment.py  run_experiment.sh  todo.md
kaarel-bet/: generate_data.py  main.py  plot_results.py  test.py  train.py
kaarel_bet/: analyse_results.py  generate_data.py  plot_results.py  test.py  train.py  utils.py
results/1/: results.json
tests/: conftest.py  test_generate_data_outputs.py  test_nothing.py  test_token_prefix_prob.py
